--- a/tiny_mrp/mrp/templates/mrp/bom/component/partialBomComponentForm.html
+++ b/tiny_mrp/mrp/templates/mrp/bom/component/partialBomComponentForm.html
@@ -6,7 +6,7 @@
     {{ form.bom.as_hidden}}
     <div class="mb-3">
         
-        <label>{{form.product.label}}</label>
+        <label>مولفه</label>
         {% render_field form.product  class='form-control select2' %}
     </div>
     <div class="mb-3">
