--- a/tiny_mrp/mrp/templates/mrp/bom/component/partialBomcomponentCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/bom/component/partialBomcomponentCreate.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
     <h5 class="modal-title">افزودن جزء</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
 </div>
 <div class="modal-body">
    {% include "mrp/bom/component/partialBomComponentForm.html" %}
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">انصراف</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">انصراف</button>
     <button type="button" class="btn btn-primary" id="save-component-btn">افزودن</button>
 </div>
