--- a/tiny_mrp/mrp/templates/mrp/bom/partialBOMList.html
+++ b/tiny_mrp/mrp/templates/mrp/bom/partialBOMList.html
@@ -189,7 +189,7 @@
 </div>
 
 <!-- BOM Detail Modal -->
-<div class="modal fade" id="bom-detail-modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="bom-detail-modal"  aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
            
@@ -198,7 +198,7 @@
 </div>
 
 <!-- Create/Edit BOM Modal -->
-<div class="modal fade" id="bom-form-modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="bom-form-modal" tabindex="-1"  role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
           
@@ -207,7 +207,7 @@
 </div>
 
 <!-- Add Component Modal -->
-<div class="modal fade" id="component-form-modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="component-form-modal"  aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             
@@ -216,7 +216,7 @@
 </div>
 
 <!-- Delete Confirmation Modal -->
-<div class="modal fade" id="delete-confirm-modal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="delete-confirm-modal"  aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
