--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
@@ -5,7 +5,9 @@
         <button type="button" class="forecast-btn mr-2" id="forecastBtn" title="View Forecast" disabled>
             <i class="fas fa-chart-line"></i>
         </button>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="modal-body">
      {% include 'mrp/manufactureorder/partialMOrderForm.html' %}
