--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderUpdate.html
@@ -1,8 +1,8 @@
-<form method="post" action="{% url 'update_morder' form.instance.id  %}" class="js-morder-update-form" autocomplete="off">
+<form method="post" action="{% url 'update_morder' form.instance.id  %}" class="js-morder-update-form" autocomplete="off" id="moForm">
  
     <div class="modal-header bg-primary" >
 
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
       <h4 class="modal-title">ویرایش</h4>
@@ -11,7 +11,7 @@
      {% include 'mrp/manufactureorder/partialMOForm2.html' %}
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
+      <button type="button" class="btn btn-default" data-bs-dismiss="modal">انصراف</button>
      
       <button type="submit" class="btn btn-primary" >بروزرسانی</button>
       
