--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -359,6 +359,13 @@
   
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'low_stock_products' %}">
+            <i class="fas fa-exclamation-triangle me-2 text-warning"></i>
+            کالاهای با کمبود
+            <span class="badge bg-danger" id="lowStockCount">0</span>
+        </a>
+    </li>
       
 
    
