--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
@@ -1,11 +1,13 @@
-<form method="post" action="{% url 'create_morder'   %}" class="js-morder-create-form" autocomplete="off">
+<form method="post" action="{% url 'create_morder'   %}" class="js-morder-create-form" autocomplete="off" id="moForm">
     {% csrf_token %}
     <div class="modal-header " >
-        <h5 class="modal-title" id="newOrderModalLabel">Create New Manufacturing Order</h5>
+        <h5 class="modal-title" id="newOrderModalLabel">ایجاد سفارش محصول</h5>
         <button type="button" class="forecast-btn mr-2" id="forecastBtn" title="View Forecast" disabled>
             <i class="fas fa-chart-line"></i>
         </button>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="modal-body">
      {% include 'mrp/manufactureorder/partialMOrderForm.html' %}
