--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -348,6 +348,12 @@
         </a>
       </li>
       <li>
+        <a href="{% url 'list_minimorder' %}">
+          <span>سفارش اولیه</span>
+  
+        </a>
+      </li>
+      <li>
         <a href="{% url 'manufacture_order_list' %}">
           <span>سفارش ساخت</span>
   
