--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -16,7 +16,7 @@
                     <button class="btn btn-outline-dark btn-block btn-block2" id="createreq" data-url="{% url 'create_purchase' %}" >
                         درخواست جدید                   </button>
                         <button class="btn btn-outline-dark btn-block btn-block3" data-url="#" >
-                            برون ریزی                 </button>
+                            خروجی اکسل                  </button>
                        
                 </div>
                 <div class="app-sidebar-menu">
@@ -134,7 +134,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="?status=Pending{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">درخواست شده</a>
                                 <a class="dropdown-item" href="?status=Approved{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">تایید انبار</a>
-                                <a class="dropdown-item" href="?status=Approve2{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">تایید مهندس اعزامی</a>
+                                <a class="dropdown-item" href="?status=Approve2{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">تایید مدیر تولید</a>
                                 <a class="dropdown-item" href="?status=Approve4{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">تایید بازرگانی</a>
 
                                 <a class="dropdown-item" href="?status=Approve3{% if sort_by %}&sort_by={{ sort_by }}{% endif %}{% if search_query %}&q={{ search_query }}{% endif %}{% if is_tamiri %}&customSwitch3_={{ is_tamiri }}{% endif %}{% if start_j %}&start={{ start_j }}{% endif %}{% if end_j %}&end={{ end_j }}{% endif %}">تایید مهندس ارزنده</a>
